--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">language</i></span>
-                                            <span class="content">yourpersonalwebsite.com</span>
+                                            <span class="content">hydrogen1999.github.io/thinhnguyencong</span>
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">phone</i></span>
